<resources>
    <string name="app_name">My Kotlin</string>
    <string name="click_me">click me</string>
    <string name="email">robykarti.s@gmail.com</string>
    <string name="user">Roby</string>
    <string name="nav_home">Home</string>
    <string name="nav_message">Message</string>
    <string name="nav_sync">Sync</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_login">Login</string>
    <string name="nav_share">Share</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>